fix(image): do not attempt to infersize in bookshop live

--- a/src/shared/astro/Image.astro
+++ b/src/shared/astro/Image.astro
@@ -59,7 +59,8 @@ if (!_image) console.warn(`Image is undefined on page ${Astro.url.toString()}`);
 if (typeof _image == "string" && /^https?:\/\/.*/.test(_image)) {
   remote = true;
 
-  const remoteSize = await inferRemoteSize(_image).catch((e) => {
+  // @ts-expect-error
+  const remoteSize = ENV_BOOKSHOP_LIVE ? { width: undefined, height: undefined } : await inferRemoteSize(_image).catch((e) => {
     console.warn(e);
     return { width: undefined, height: undefined };
   });
