fix(card-index): disallow null empty type for filters and include

--- a/src/components/card-index/card-index.astro
+++ b/src/components/card-index/card-index.astro
@@ -23,8 +23,8 @@ const {
     target = "",
     include = ["title", "description", "thumbnail", "link", "read-more"],
     columns = 4,
-    filters = [""],
-    prefilter = [""],
+    filters = [],
+    prefilter = [],
     pageSize = 0,
     limit = 0,
     aspect = 1,
