feat: link to sitemap in page head

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -59,6 +59,7 @@ headerHeight && (style["--header-height"] = headerHeight + "px");
         <meta name="revision" content={git.long("./")} />
         <meta name="format-detection" content="telephone=no" />
         {status !== "online" && <meta name="robots" content="noindex" />}
+        <link rel="sitemap" href="/sitemap-index.xml" />
 
         <Opengraph {title} {description} {thumbnail} />
 
