fix: entirely remove pagefind-body tag on hidden pages

--- a/src/shared/astro/Page.astro
+++ b/src/shared/astro/Page.astro
@@ -33,7 +33,7 @@ Object.entries(componentOverrides).forEach(
 );
 ---
 
-<main data-pagefind-body={_frontmatter.status === "online"} data-lightbox={lightbox}>
+<main data-pagefind-body={_frontmatter.status === "online" ? "" : undefined} data-lightbox={lightbox}>
     {
         contentBlocks.map((block: any, i: number) => {
             const Component = components[block._bookshop_name];
