--- a/src/shared/astro/Image.astro
+++ b/src/shared/astro/Image.astro
@@ -129,8 +129,8 @@ if (widths === undefined && width && height) {
 
 // Generate sizes
 // TODO: Better image sizes for mobile - should sometimes be larger than desktop
-if (widths?.length) {
-  const _sizes = widths.toSorted((a,b) => b-a).reduce<string[]>((a, c, i, o) => {
+if (widths) {
+  const _sizes = [...widths].sort((a,b) => b-a).reduce<string[]>((a, c, i, o) => {
     if (a.length)
     a.push(`(max-width: ${o[i-1]}px) ${c}px`);
     else
