fix(file): correct links to absolute

--- a/src/components/file/file.astro
+++ b/src/components/file/file.astro
@@ -168,7 +168,7 @@ if (!ENV_BOOKSHOP_LIVE && files?.length) {
                                     </div>
                                 )}
                             </div>
-                            <a href={path} />
+                            <a href={path.startsWith("/") ? path : `/${path}`} />
                         </li>
                     );
                 })
