--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -79,6 +79,17 @@ html {
 
 article {
   background-color: rgb(var(--article-background-color));
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+  & > main {
+    flex: 1 0 100%;
+  }
+
+  & > section.footer {
+    flex: 0 0 100%;
+  }
 }
 
 body {
