--- a/src/shared/astro/Header.astro
+++ b/src/shared/astro/Header.astro
@@ -14,8 +14,7 @@ const { id, currentPath } = Astro.props;
 <header
     id="header"
     class:list={{
-        pinned: preferences.header.pin_header !== "false",
-        contain: preferences.header.pin_header === "contain",
+        pinned: preferences.header.pin_header && preferences.header.pin_header !== "false",
         "mobile-logo": preferences.header.show_logo_mobile ?? false,
     }}
 >
@@ -57,6 +56,8 @@ const { id, currentPath } = Astro.props;
         /* grid-template-rows: 3.6rem 1fr; */
 
         /* grid-template-columns: auto 1fr; */
+
+        padding: 0 var(--page-max-width-padding);
     }
 
     header.pinned {
@@ -64,15 +65,14 @@ const { id, currentPath } = Astro.props;
         left: 0;
         right: 0;
         top: 0;
-        padding: 0 var(--page-max-width-padding);
     }
 
     header.pinned.contain {
         /* left: calc((100vw - var(--page-max-width)) * 0.5); */
-        top: 0;
-        left: unset;
-        right: unset;
-        width: min(var(--page-max-width), 100vw);
+        /* top: 0; */
+        /* left: unset; */
+        /* right: unset; */
+        /* width: min(var(--page-max-width), 100vw); */
     }
 
     .logo {
