refactor(navigation): clean up css, js

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,7 +25,7 @@
   --bold-font-family: var(--default-font-family);
 
   --color-primary: 24 58 78;
-  --color-accent: 120 45 49;
+  --color-accent: 80 167 205;
   --text-color: var(--color-primary);
   --heading-color: var(--text-color);
 
@@ -39,6 +39,8 @@
   --header-height: 100px;
   --header-offset-transparent: 0px;
 
+  /* --nav-dropdown-border */
+
   --mobile-header-background-color: var(--header-background-color);
   --mobile-header-background-color-bottom: var(
     --header-background-color-bottom
@@ -46,6 +48,8 @@
   --mobile-header-color: var(--header-color);
 
   --border-radius: 0.3rem;
+  --border-color: var(--text-color);
+  --border-width: 2px;
 
   --info-color: 147 205 223;
   --warning-color: 233 205 115;
