--- a/src/shared/astro/Header.astro
+++ b/src/shared/astro/Header.astro
@@ -4,132 +4,138 @@ const preferences = _preferences as unknown as Preferences;
 import Navigation from "./SiteNavigation.astro";
 
 export interface Props {
-    id?: string;
-    currentPath?: string;
+  id?: string;
+  currentPath?: string;
 }
+
+const theme: "pod" | "agency" | undefined = undefined;
 
 const { id, currentPath } = Astro.props;
 ---
 
 <header
-    id="header"
-    class:list={{
-        pinned: preferences.header.pin_header && preferences.header.pin_header !== "false",
-        "mobile-logo": preferences.header.show_logo_mobile ?? false,
-    }}
+  id="header"
+  class:list={{
+    pinned:
+      preferences.header.pin_header &&
+      preferences.header.pin_header !== "false",
+    "mobile-logo": preferences.header.show_logo_mobile ?? false,
+    [`theme-${theme}`]: !!theme,
+  }}
 >
-    {
-        preferences.header.show_logo && (
-            <a class="logo" href="/" title="Home">
-                <img
-                    src={preferences.header.logo_image}
-                    alt={`${preferences.general.site_name} Logo`}
-                />
-            </a>
-        )
-    }
-    {preferences.header.show_navigation && <Navigation {id} {currentPath} />}
+  {
+    preferences.header.show_logo && (
+      <a class="logo" href="/" title="Home">
+        <img
+          src={preferences.header.logo_image}
+          alt={`${preferences.general.site_name} Logo`}
+        />
+      </a>
+    )
+  }
+  {preferences.header.show_navigation && <Navigation {id} {currentPath} />}
 </header>
 
 <style>
-    header {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        display: grid;
-        z-index: 8000;
-        --text-color: var(--header-color);
-        color: rgb(var(--header-color));
-        height: var(--header-height);
-        background: linear-gradient(
-            to bottom,
-            rgba(var(--header-background-color)),
-            rgba(var(--header-background-color-bottom))
-        );
+  header {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    display: grid;
+    z-index: 8000;
+    --text-color: var(--header-color);
+    color: rgb(var(--header-color));
+    height: var(--header-height);
+    background: linear-gradient(
+      to bottom,
+      rgba(var(--header-background-color)),
+      rgba(var(--header-background-color-bottom))
+    );
 
-        grid-template-areas: "logo navigation";
-        grid-template-rows: 100%;
-        grid-template-columns: 1fr auto;
+    grid-template-areas: "logo navigation";
+    grid-template-rows: 100%;
+    grid-template-columns: 1fr auto;
 
-        /* grid-template-areas: "logo secondary" "logo navigation"; */
-        /* grid-template-rows: 3.6rem 1fr; */
+    /* grid-template-areas: "logo secondary" "logo navigation"; */
+    /* grid-template-rows: 3.6rem 1fr; */
 
-        /* grid-template-columns: auto 1fr; */
+    /* grid-template-columns: auto 1fr; */
 
-        padding: 0 var(--page-max-width-padding);
-    }
+    padding: 0 var(--page-max-width-padding);
+  }
 
-    header.pinned {
-        position: fixed;
-        left: 0;
-        right: 0;
-        top: 0;
-    }
+  header.pinned {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+  }
 
-    header.pinned.contain {
-        /* left: calc((100vw - var(--page-max-width)) * 0.5); */
-        /* top: 0; */
-        /* left: unset; */
-        /* right: unset; */
-        /* width: min(var(--page-max-width), 100vw); */
-    }
+  .logo {
+    padding: 10px;
+    grid-area: logo;
+    width: fit-content;
+    min-width: 15rem;
+  }
 
-    .logo {
-        padding: 10px;
-        grid-area: logo;
-        width: fit-content;
-        min-width: 15rem;
-    }
+  .logo img {
+    object-fit: contain;
+    object-position: left;
+    width: auto;
+    height: var(--header-height);
+    max-height: 100%;
+    max-width: 100%;
+  }
 
-    .logo img {
-        object-fit: contain;
-        object-position: left;
-        width: auto;
-        height: var(--header-height);
-        max-height: 100%;
-        max-width: 100%;
-    }
+  .theme-pod {
+    border-radius: 9999px;
+    /* overflow: hidden; */
+    border: 2px solid rgb(var(--header-color));
+    /* margin: 1rem calc(4rem + var(--page-max-width-padding, 0)); */
+
+    width: fit-content;
+    margin-left: 50%;
+    transform: translateX(-50%);
+
+    padding: 0 2rem;
+  }
 </style>
 
 <style lang="scss" is:global>
-    /* header nav {
-        grid-area: secondary / secondary / navigation / navigation;
-    } */
+  header .secondary ul.social {
+    padding: 0;
+  }
 
-    header .secondary ul.social {
-        padding: 0;
+  header .secondary li {
+    font-size: var(--text-size-small);
+    letter-spacing: 1px;
+  }
+
+  .mobile-nav {
+    #header.mobile-logo {
+      grid-template-areas: "logo";
+
+      .logo {
+        width: 100%;
+
+        img {
+          width: 100%;
+          object-position: center;
+        }
+      }
     }
 
-    header .secondary li {
-        font-size: var(--text-size-small);
-        letter-spacing: 1px;
+    #header:not(.mobile-logo) {
+      height: 0;
+
+      .logo {
+        display: none;
+      }
     }
 
-    .mobile-nav {
-        #header.mobile-logo {
-            grid-template-areas: "logo";
-
-            .logo {
-                width: 100%;
-
-                img {
-                    width: 100%;
-                    object-position: center;
-                }
-            }
-        }
-
-        #header:not(.mobile-logo) {
-            height: 0;
-
-            .logo {
-                display: none;
-            }
-        }
-
-        body:has(> #header:not(.mobile-logo)) {
-            --header-height: 0;
-        }
+    body:has(> #header:not(.mobile-logo)) {
+      --header-height: 0;
     }
+  }
 </style>
